name:                servant-auth-cookie
version:             0.3.2
synopsis:            Authentication via encrypted cookies
description:         Authentication via encrypted client-side cookies,
                     inspired by client-session library by Michael Snoyman and based on
                     ideas of the paper "A Secure Cookie Protocol" by Alex Liu et al.
license:             BSD3
license-file:        LICENSE
author:              Al Zohali
maintainer:          Al Zohali <zohl@fmap.me>
copyright:           Al Zohali <zohl@fmap.me>, Mark Karpov <markkarpov@opmbx.org>
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/zohl/servant-auth-cookie.git

flag dev
  description:        Turn on development settings.
  manual:             True
  default:            False

library
  exposed-modules:
    Servant.Server.Experimental.Auth.Cookie

  build-depends: base           
               , base64-bytestring
               , blaze-builder  
               , bytestring
               , cereal         
               , cookie         
               , cryptonite     
               , data-default
               , exceptions     
               , http-types     
               , memory         
               , mtl            
               , servant        
               , servant-server 
               , time           
               , transformers   
               , wai            
  if !impl(ghc >= 7.8)
    build-depends:    tagged    == 0.8.*
  if flag(dev)
    ghc-options:      -Wall -Werror
  else
    ghc-options:      -O2 -Wall
  hs-source-dirs:      src
  default-language:    Haskell2010

executable example
  main-is:             Main.hs
  build-depends: base           
               , blaze-html     
               , blaze-markup   
               , bytestring
               , cereal         
               , cryptonite     
               , data-default
               , http-media
               , mtl            
               , servant        
               , servant-auth-cookie
               , servant-blaze  
               , servant-server 
               , text
               , wai            
               , warp           
  if flag(dev)
    ghc-options:      -Wall -Werror
  else
    ghc-options:      -O2 -Wall
  hs-source-dirs:      example
  default-language:    Haskell2010

test-suite tests
  type:           exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is:        Main.hs
  if flag(dev)
    ghc-options:      -Wall -Werror
  else
    ghc-options:      -O2 -Wall

  build-depends: base           
               , QuickCheck     
               , bytestring
               , cereal         
               , cryptonite     
               , data-default
               , deepseq        
               , hspec          
               , servant-auth-cookie
               , servant-server 
               , time           
  if !impl(ghc >= 7.8)
    build-depends:    tagged    == 0.8.*
  default-language:    Haskell2010

benchmark bench
  type:             exitcode-stdio-1.0

  hs-source-dirs:   benchmarks
  main-is:          Main.hs

  default-language: Haskell2010

  build-depends: base           
               , bytestring
               , criterion      
               , cryptonite     
               , servant-auth-cookie
               , servant-server 
  if flag(dev)
    ghc-options:      -Wall -Werror
  else
    ghc-options:      -O2 -Wall
